--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,66 @@
 body {
-  width: 400px;
-  font-family: monospace;
+  width: 370px;
+  font-family: "Roboto Mono", monospace;
   font-size: 1em;
+  background: linear-gradient(180deg, #fcabab 0%, rgba(241, 241, 241, 0) 100%);
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  border-bottom: 1px solid white;
+  padding: 18px 18px 5px;
+}
+
+.main {
+  padding: 5px 20px 20px;
+}
+
+#title {
+  text-align: center;
+  margin: 0 0 12px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+#intro {
+  font-size: 12px;
 }
 
 #altList {
-  background: lightgrey;
-  padding: 10px;
+  background: white;
+  padding: 10px 15px;
   overflow: scroll;
-  height: 0px;
+  height: 280px;
+  border-radius: 10px;
+  margin: 10px 0;
+  font-size: 12px;
 }
 
-#altList.active {
-  height: 400px;
+#altList.haiku {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons button {
+  width: 47%;
+  background: #454545;
+  border-radius: 15px;
+  color: white;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 500;
+}
+
+.buttons button:hover,
+.buttons button:active {
+  background: #add33f;
 }
